--- a/admin/themes/roma/css/components/general.css
+++ b/admin/themes/roma/css/components/general.css
@@ -192,3 +192,13 @@ or (generated by selectize.js)
 .advanced-filter-item-container .selectize-control .selectize-input .item {
     padding-right: 0 !important;
 }
+
+.info-message {
+  background-color:  #50a48f;
+  color: #a9f6e3;
+}
+
+.info-warning {
+  background-color: #ee8800;
+  color:#ffdd99;
+}
